--- a/assets/style.css
+++ b/assets/style.css
@@ -95,11 +95,11 @@ body {
 	font-weight: 800;
 	font-size: 1rem;
 	font-style: italic;
-	width: auto;
+	width: 80%;
 }
 
 #about-me p {
-	width: auto;
+	width: 80%;
 }
 
 #gallery {
